# bim_stats

./: .gitignore  README.md  pyproject.toml
data/: README.md
notebooks/: analyze_buildings.ipynb  data_cleanup.ipynb  visualize_buildings.ows  visualize_projections.ows
notebooks/data/: dummy.txt
src/examples/: hello_world.py  import_hello.py
